Get JDK nashorn

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
 
     <repositories>
         <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>opencollab</id>
+            <url>https://repo.opencollab.dev/maven-releases/</url>
+        </repository>
+        <repository>
             <id>jabylon</id>
             <name>jabylon</name>
             <url>https://www.jabylon.org/maven/</url>
@@ -34,5 +42,11 @@
             <version>2.0.8</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.openjdk.nashorn/nashorn-core -->
+        <dependency>
+            <groupId>org.openjdk.nashorn</groupId>
+            <artifactId>nashorn-core</artifactId>
+            <version>15.4</version>
+        </dependency>
     </dependencies>
 </project>
